# finapp

./: .coveragerc  .flake8  .gitignore  .pylintrc  AGENTS.md  API_KEYS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml  pyrefly.toml  requirements-dev.txt  requirements.txt  rxconfig.py
.claude/: settings.json
.claude/commands/: finapp-components.md
.github/: copilot-instructions.md
.github/instructions/: flows.instructions.md  models.instructions.md  providers.instructions.md  ui.instructions.md
.github/workflows/: test.yml
app/: __init__.py  app.py
app/components/: combobox.py  gaugechart.py  headlessui.py  navbar.py  portal.py  querybuilder.py  querybuilder.py.old  theme_toggle.py
app/components/uikit/: CHANGELOG.md
app/core/: settings.py
app/flows/: README.md  base.py  cache.py  compare.py  helpers.py  markets.py  markets_buffet.py  markets_vix.py  test.py
app/flows/compare/: __init__.py  metrics.py  returns.py  rsi.py  time_series.py  volatility.py  volume.py
app/flows/markets/: __init__.py  bloomberg_commodity.py  buffet.py  crude_oil.py  crypto.py  currency.py  msci_world.py  precious_metals.py  vix.py  yield_curve.py
app/lib/: charts.py  exceptions.py  finance.py  logger.py  metrics.md  metrics.py  parsers.py  periods.py  scrapper.py  settings.py  storage.py
app/models/: base.py  blackrock.py  blackrock.py.txt  cache.py  ecb.py.txt  fred.py.txt  parsers.py  reddit.py.txt  ticker.py  tipranks.py  yahoo.py  zacks.py
app/pages/: backtest.py  cache.py  compare.py  compare.py.backup  index.py  markets.py  optimize.py  portfolio.py  screen.py  test.py  workflows.py
app/pages/backtest/: __init__.py  page.py
app/pages/cache/: __init__.py  page.py
app/pages/compare/: __init__.py  metrics.py  page.py  returns_chart.py  rsi_chart.py  volatility_chart.py  volume_chart.py
app/pages/index/: __init__.py  page.py
app/pages/markets/: __init__.py  bloomberg_commodity.py  buffet_indicator.py  crude_oil.py  crypto_chart.py  currency_chart.py  msci_world.py  page.py  placeholder_charts.py  precious_metals.py  vix_chart.py  yield_curve.py
app/pages/optimize/: __init__.py  card1.py  card2.py  page.py  state.py
app/pages/portfolio/: __init__.py
app/pages/screen/: __init__.py  page.py
app/pages/test/: __init__.py
app/providers/: alphavantage.py.txt  base.py  blackrock.py  cache.py  fred.py  headers.py  ibkr.py  ibkr.py.txt  oecd.py.txt  reddit.py.txt  sec.py.txt  shiller.py  tipranks.py  yahoo.py  zacks.py
app/templates/: template.py
assets/: index.md
data/: 20250802.GOOGL.parquet  20250802.MSFT.parquet  20250802.TSLA.parquet
docs/: ui.pptx
notebooks/: core.ipynb  flows.ipynb  flows.patterns.ipynb  lib.ipynb  markets.ipynb  models.ipynb  providers.ipynb  temp.ipynb
tests/: conftest.py
tests/core/: test_settings.py
tests/flows/: test_base.py  test_cache.py  test_compare.py  test_helpers.py  test_markets.py  test_markets_buffet.py  test_markets_vix.py
tests/flows/compare/: __init__.py  test_metrics.py  test_time_series.py
tests/flows/markets/: test_bloomberg_commodity.py  test_buffet.py  test_crude_oil.py  test_crypto.py  test_currency.py  test_msci_world.py  test_precious_metals.py  test_vix.py  test_yield_curve.py
tests/lib/: test_charts.py  test_exceptions.py  test_finance.py  test_logger.py  test_metrics.py  test_periods.py  test_scrapper.py  test_settings.py  test_storage.py
tests/models/: test_base.py  test_blackrock.py  test_cache.py  test_headers.py  test_parsers.py  test_ticker.py  test_tipranks.py  test_yahoo.py  test_zacks.py
tests/providers/: test_base.py  test_blackrock.py  test_cache.py  test_fred.py  test_headers.py  test_ibkr.py  test_shiller.py  test_tipranks.py  test_yahoo.py  test_zacks.py
twsapi/: README.md
(+4 files in other folders)
